# ai-engineering

booking_agent_adk/: .env  pyproject.toml
booking_agent_adk/src/booking_agent_adk/: __init__.py  agent.py  prompt.py  task_manager.py
booking_agent_adk/src/booking_agent_adk/tools/: memory.py
multi_agent_travel_adk/: sessions.db
multi_agent_travel_adk/travel_agent/: agent.py  prompt.py
multi_agent_travel_adk/travel_agent/sub_agents/booking/: agent.py  prompt.py
multi_agent_travel_adk/travel_agent/sub_agents/planning/: agent.py
multi_agent_travel_adk/travel_agent/tools/: places.py  search.py
multi_agent_travel_adk_a2a/: .dockerignore  .env  deployment.yaml  pyproject.toml  requirements.txt
multi_agent_travel_adk_a2a/eval/: itinerary_empty_default.json
multi_agent_travel_adk_a2a/travel_agent/shared_libraries/: constants.py  types.py
multi_agent_travel_adk_a2a/travel_agent/sub_agents/booking/: agent.py  host_agent.py  remote_agent_connection.py
multi_agent_travel_adk_a2a/travel_agent/sub_agents/inspiration/: agent.py  prompt.py
multi_agent_travel_adk_a2a/travel_agent/sub_agents/planning/: prompt.py
multi_agent_travel_adk_a2a/travel_agent/tools/: memory.py
